--- a/examples/ssd1306-i2c-example/main/idf_component.yml
+++ b/examples/ssd1306-i2c-example/main/idf_component.yml
@@ -4,8 +4,8 @@ dependencies:
   idf:
     version: ">=5.3.0"
 
-  chill-sam/esp-ssd1306:
-    version: "*"
+  chill-sam/ssd1306:
+    version: "^1.0.0"
 
     ## Override for local development.
     override_path: '../../../'
